--- a/components/Sequencer/index.module.css
+++ b/components/Sequencer/index.module.css
@@ -1,3 +1,12 @@
+.sequencer {
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.sequencer.active {
+  opacity: 1;
+}
+
 .sequencerTitle {
   margin-left: -2px;
 }
