--- a/components/Sequencer/index.module.css
+++ b/components/Sequencer/index.module.css
@@ -81,5 +81,5 @@
 .verticalDivider {
   width: 1px;
   height: 28px;
-  background-color: var(--secondary-color);
+  background-color: transparent;
 }
